More layout changes to home page and fixed portfolio width on small tablets

--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ body {
 }
 
 .intro {
-    margin-top: 2vw !important;
+    margin-top: 4.5rem !important;
     padding: 0 0 0 7% !important;
     zoom: 1.25;
 }
@@ -36,13 +36,8 @@ body {
 }
 
 .home.ui.grid > .column.featured-image img {
-    /*margin: 0 15%;*/
-    /*width: 70%;*/
-    /*bottom: 0;*/
-    /*position: relative;*/
-
-    margin: 0 0 0 7.5%;
-    width: 26em;
+    margin: 0 0 0 9%;
+    width: 30em;
     bottom: 0;
     position: relative;
 }
@@ -285,25 +280,46 @@ hr {
         display: inline-block;
         float: left;
     }
+    .home.ui.grid > .column.featured-image img {
+        width: 24em;
+    }
+    .intro {
+        margin-top: 2rem !important;
+        padding-left: 6% !important;
+    }
 }
 
 @media screen and (max-width: 1150px) {
     .intro {
-        margin-top: 5vw !important;
-        padding-left: 6% !important;
-        zoom: 1;
+        margin-top: 2rem !important;
+        padding-left: 5% !important;
+        zoom: 1.1;
     }
     .home.ui.grid > .column.featured-image img {
         width: 23em !important;
+        margin: 0 0 0 4%;
+    }
+}
+
+@media screen and (max-width: 1080px) {
+    .home.ui.grid > .column.featured-image img {
+        width: 22em !important;
+        margin: 0;
+    }
+}
+
+@media screen and (max-width: 1020px) {
+    .intro {
+        margin-top: 1rem !important;
     }
 }
 
 @media screen and (max-width: 999px) {
     .intro {
-        margin-top: 0 !important;
+        margin-top: 1rem !important;
     }
 
-    .portfolio .ui.stackable.grid > div.categories.left.floated.column:first-child {
+    .portfolio .ui.stackable.grid > div.categories.left.floated.column {
         margin-top: -.25em !important;
         /*width: 100% !important;*/
         /*float: left !important;*/
@@ -311,6 +327,10 @@ hr {
         width: 100% !important;
         margin-bottom: .25em !important;
         padding-right: 1em;
+    }
+
+    .portfolio .ui.stackable.grid > div.left.floated.column {
+         width: 100% !important;
     }
 
     .portfolio h2.ui.header {
@@ -332,6 +352,9 @@ hr {
     .intro {
         padding: 0 5% !important;
     }
+}
+
+@media only screen and (max-width: 991px) {
     .home.ui.grid > .column.featured-image img {
         width: 70% !important;
         padding: 0%;
